fix alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap');
 
+
+
 body {
-
-
 
     background: url(https://www.punchdrunk.com/content/uploads/2021/09/PDSiteHeaderHamdark.jpg);
     /* background-color: black; */
@@ -10,8 +10,7 @@ body {
     background-attachment: fixed;
     background-size: 100%;
     font-family: 'Source Sans Pro', sans-serif;
-    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
-    height: calc(var(--vh, 1vh) * 100);
+    
 
 }
 
@@ -34,27 +33,40 @@ td {
 }
 
 .table_scroll {
-    width:100%;
+
     overflow:scroll;
     overflow-y: hidden;
     display: none;
+
+    
+
     
 }
 
-.content {
-    width:100%;
-    height:auto;
-}
 
-.child {
+
+#content {
+    height: 100%;
+    width: 100%;
     position: absolute;
-    width:80%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     text-align: center;
+    vertical-align: middle;
+    
+
+    
+    
+}
+
+.padding {
+    width:10%;
 
 }
+
+
 
 .disclaimer {
     padding: 10px;
